--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
@@ -37,6 +40,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
