--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "twilio": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
