--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
+    "libphonenumber-js": "^1.11.11",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
