--- a/.hintrc
+++ b/.hintrc
@@ -25,7 +25,8 @@
       "default",
       {
         "ignore": [
-          "backdrop-filter"
+          "backdrop-filter",
+          "scrollbar-width"
         ]
       }
     ]
