adding_forms_upload_courses

--- a/.hintrc
+++ b/.hintrc
@@ -26,7 +26,8 @@
       {
         "ignore": [
           "backdrop-filter",
-          "scrollbar-width"
+          "scrollbar-width",
+          "scrollbar-width: none"
         ]
       }
     ],
