--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -23,26 +24,32 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "@tailwindcss/typography": "^0.5.15",
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
     "libphonenumber-js": "^1.11.11",
     "lucide-react": "^0.446.0",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dynamic-import": "^1.1.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "rehype-sanitize": "^6.0.0",
     "sass": "^1.79.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
