--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,12 +40,14 @@
     "libphonenumber-js": "^1.11.11",
     "lucide-react": "^0.446.0",
     "npm": "^10.9.0",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dynamic-import": "^1.1.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
