--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@lexical/react": "^0.18.0",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -40,20 +41,19 @@
     "libphonenumber-js": "^1.11.11",
     "lucide-react": "^0.446.0",
     "npm": "^10.9.0",
-    "quill-image-resize-module": "^3.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dynamic-import": "^1.1.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "rehype-sanitize": "^6.0.0",
     "sass": "^1.79.4",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
     "zod": "^3.23.8"
