--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  
   "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node ./src/server.ts"
-  },
+  "start": "node ./dist/sever.js",
+  "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.15",
     "passport-github2": "^0.1.12",
