--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,8 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "homepage": ".",
+
   "type": "module",
   "scripts": {
     "dev": "vite",
